--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 body{
     margin: 0px;
-    background-color: var(--color-background)
+    background: --cor-default;
 }
 
 :root {
+    --cor-default: #ffffff;
     --color-background: #F2E7DC;
     --color-primary: #027373;
     --color-secondary: #038C7F;
@@ -14,7 +15,7 @@ body{
 
 
 header{
-    background: var(--color-background);
+    background: var(--cor-default);
     position: sticky;
     top: 0px;
     display: flex;
@@ -44,7 +45,7 @@ header h1 {
     font-size: 22px;
     text-decoration: none;
     color: var(--color-text);
-    border: 1px solid var(--color-background);
+    border: 1px solid var(--cor-default);
     align-self: center;
     padding: 11px;
     margin: 10px;
@@ -95,7 +96,7 @@ header h1 {
 /* ################# TELA INICIAL ################### */
 #home {
     display: flex;
-    background-color: var(--color-text);
+    background-image: linear-gradient(45deg, var(--color-text),var(--color-text), #212121, #3f3f3f, #6f6f6f);    
     max-height: 500px;
     padding: 2% 5% 5% 5%;
     height: 100vh;
@@ -166,43 +167,47 @@ font-style: italic;
     font-weight: 900;
     font-size: 32px;
 }
-
 .div-about {
     display: flex;
+    padding: 20px;
+    /* width: 3000px; Adicionado */
     column-gap: 15px;
-    overflow: auto;
+    overflow-x: auto;
     /* width: 100%; */
-    height: 200px;
+    /* height: 200px; */
 }
 
 .box-swic {
-    display: inline-block;
-    flex-direction: column;
-    /* flex-grow: 1; */
-    /* flex-wrap: 1; */
+    flex: 0 0 auto;
     width: 330px;
-    color: var(--color-background);
-    background-color: var(--color-text);
-    padding: 2%;
-    border: 1px solid var(--color-text);
-    border-radius: 20px;
-    /* max-height: 100px; */
-    box-shadow: 0.1em 0.1em 0.5em -0.1em gray;
+    
+
+    /* color: var(--color-background); */
+    /* background-color: var(--color-text); */
+    /* border: 1px solid var(--color-text); */
+    /* border-radius: 20px; */
+    /* box-shadow: 0.1em 0.1em 0.5em -0.1em rgb(128, 128, 128); */
+    -webkit-box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
+    -moz-box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
+    box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
 }
 
-#img1-swic{
-
-    background: url("../img/pexels-jplenio.jpg");
-    /* width: 100%; */
-    /* background-position: 5px 50px; */
-    background-size: cover;
+.div-about-context{
+    color: var(--color-text);
+    
+    padding: 20px;
 }
+
+.color-img-about {
+    background: var(--color-primary);
+    float: inline-end;
+}
+
 
 .box-swic:hover{
-    width: 335px;
-    /* padding: 3%; */
-
-    box-shadow: 0.4em 0.4em 1em -0.2em gray;
+    -webkit-box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
+    -moz-box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
+    box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
 }
 
 /* ################################################ */
@@ -221,22 +226,115 @@ font-style: italic;
 }
 
 #div-price{
-    display: flex;
+    display: inline-block;
+    overflow: auto;   
+    text-align: center;
+}
+
+.box-new{
+    display: inline-block;
+    flex: 0 0 block;
+    width: 420px;
+    margin: 10px 5px;
+
+    -webkit-box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
+    -moz-box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
+    box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
 }
 
 .box-price {
-    border: 1px solid #0d8880;
-    margin: 10px 5px;
-    border-radius: 25px;
     padding: 25px;
-    text-align: justify;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
 }
 
+.box-price p {
+    text-align: justify;
+}
+
+.img-width{
+    width: 100%;
+}
+
+#color-img-price {
+    background: var(--color-accent);
+}
+
+
+.button-busy {
+    width: 150px;
+    background: black;
+    border-radius: 20px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-busy p {
+    margin: 0px;
+    color: white;
+    text-align: center;
+}
+
+#centralizar {
+    text-decoration: none;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
+
+.button-busy:hover{
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(0,0,0,1);
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,1);
+}
 
 audio{ 
     display: none;
 }
+
+
+/* ######################################################### */
+/* ################### tabela perfomance ################### */
+
+#performance{
+    padding: 3% 5% 2% 5%;
+}
+
+
+
+
+
+table{
+    border-collapse: collapse;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+.line0 {
+    background: var(--color-secondary);
+    border-color: var(--color-secondary);
+}
+
+.line1 {
+    background: var(--cor-default);
+    border-color: var(--cor-default);
+}
+
+.line2 {
+    background: var(--color-accent);
+    border-color: var(--color-accent);
+}
+
+.line1:hover{
+    background: var(--cor-default);
+    
+    border-color: var(--cor-default);
+}
+
+.line2:hover {
+
+    background: #81d2c3;
+    border-color: #81d2c3;
+}
+
