--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+html {
+    scroll-behavior: smooth;
+    margin-inline: unset;
+    /* writing-mode: horizontal-tb; */
+}
+
 body{
     margin: 0px;
     background: --cor-default;
@@ -13,541 +18,8 @@ body{
     --color-text: #0D0D0D;
 }
 
-.central{
-    display: none;
-    visibility: hidden;
-    margin: 0px 20px 0px 0px;
-    align-self: center;
-   
-}
-
-.menu img{
-    padding: 5px;
-    margin: 0;
-    align-items: center;
-}
-
-.menu:hover #img-context{
-    /* border-radius: 25px; */
-    background: rgb(217, 217, 217);
-    opacity: 70%;
-}
-
-.menu:hover ~ .nav , .nav:hover{
-    display: block;
-}
-
-.nav{
-
-    display: none;
-    position: absolute;
-    right: 20px;
-    /* top: 0; */
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    width: 150px;
-}
-
-.nav-context a {
-    text-decoration: none;
-    color: white;
-}
-
-.nav-context {
-    padding: 14px 16px;
-    background: rgb(44, 44, 44);
-}
-
-li:hover {
-    background: rgb(66, 66, 66);
-}
-
-header{
-    background: var(--cor-default);
-    position: sticky;
-    top: 0px;
-    display: flex;
-    width: 100%;
-    border-bottom: 1px solid gray;
-}
-
-
-.spacer {
-    flex-grow: 1;
-}
-
-header h1 { 
-
-    color: var(--color-text);
-    margin-left: 5%;
-}
-
-#nav-header {
-    
-    align-self: center;
-
-}
-
-.nav-opc {
-
-    font-size: 22px;
-    text-decoration: none;
-    color: var(--color-text);
-    border: 1px solid var(--cor-default);
-    align-self: center;
-    padding: 11px;
-    margin: 10px;
-
-}
-
-#nav-opc1{
-
-    display: inline-block;
-    margin: 0px 30px 0px 0px;
-    align-items: center;
-}
-
-#nav-opc2{
-    
-    margin: 0px 30px 0px 0px;
-
-}
-
-#nav-opc3{
-    
-    margin: 0px 30px 0px 0px;
-
-}
-
-#nav-opc4{
-    
-    margin: 0px 80px 0px 0px;
-
-}
-#nav-opc1:hover, 
-#nav-opc2:hover, 
-#nav-opc3:hover, 
-#nav-opc4:hover {
-
-    background-color:var(--color-text);
-    text-decoration: underline;
-    border: 1px solid #ffffff;
-    border-radius: 50%;
-    color: #ffffff;
-    
-
-}
-
-
-
-/* ################################################## */
-/* ################# TELA INICIAL ################### */
-#home {
-    display: flex;
-    background-image: linear-gradient(45deg, var(--color-text),var(--color-text), #212121, #3f3f3f, #6f6f6f);    
-    max-height: 500px;
-    padding: 2% 5% 5% 5%;
-    height: 100vh;
-
-}
-
-.img-home {
-    
-    padding: 5%;
-    max-width:500px;
-
-}
-
-#home h2 {
-    align-self: center;
-    color: white;
-    /* margin-left: 40px; */
-    /* padding: 30px 30px 0px 0px; */
-    font-size: 55px;
-}
-
-#home p{
-    color: white;
-    align-items: center;
-    align-self: center;
-    font-size: 18px;
-    padding: 5px 15px 15px 0px;
-    text-align: justify;
-}
-
-#home b {
-    color: var(--color-secondary);
-    font-weight: 900;
-}
-
-/* ################################################ */
-/* ################# TELA SOBRE NÓS ################### */
-
-.libre-baskerville-regular {
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-.libre-baskerville-bold {
-font-family: "Libre Baskerville", serif;
-font-weight: 700;
-font-style: normal;
-}
-
-.libre-baskerville-regular-italic {
-font-family: "Libre Baskerville", serif;
-font-weight: 400;
-font-style: italic;
-}
-
-
-#about {
-    padding: 3% 5% 2% 5%;
-    font-size: 18px;
-    color: var(--color-text);
-    text-align: justify;
-    font-weight: bolder;
-    line-height: 1.5;
-}
-
-#about h2 {
-    font-weight: 900;
-    font-size: 32px;
-}
-.div-about {
-    display: flex;
-    padding: 20px;
-    /* width: 3000px; Adicionado */
-    column-gap: 15px;
-    overflow-x: auto;
-    /* width: 100%; */
-    /* height: 200px; */
-}
-
-.box-swic {
-    flex: 0 0 auto;
-    width: 330px;
-    
-
-    /* color: var(--color-background); */
-    /* background-color: var(--color-text); */
-    /* border: 1px solid var(--color-text); */
-    /* border-radius: 20px; */
-    /* box-shadow: 0.1em 0.1em 0.5em -0.1em rgb(128, 128, 128); */
-    -webkit-box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
-    -moz-box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
-    box-shadow: 13px 14px 8px -14px rgba(169,217,208,1);
-}
-
-.div-about-context{
-    color: var(--color-text);
-    
-    padding: 20px;
-}
-
-.color-img-about {
-    background: var(--color-primary);
-    float: inline-end;
-}
-
-
-.box-swic:hover{
-    -webkit-box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
-    -moz-box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
-    box-shadow: 0px 0px 11px 8px rgba(169,217,208,1);
-}
-
-/* ################################################ */
-/* ################### SERVIÇOS ################### */
-
-#services {
-
-    padding: 3% 5% 2% 5%;
-
-}
-
-#services h2 {
-    font-size: 22px;
-    text-align: justify;
-    
-}
-
-#div-price{
-    display: inline-block;
-    overflow: auto;   
-    text-align: center;
-}
-
-.box-new{
-    display: inline-block;
-    flex: 0 0 block;
-    width: 420px;
-    margin: 10px 5px;
-
-    -webkit-box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
-    -moz-box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
-    box-shadow: 11px 15px 10px -10px rgba(242,231,220,1);
-}
-
-.box-price {
-    padding: 25px;
-}
-
-.box-price p {
-    text-align: justify;
-}
-
-.img-width{
-    width: 100%;
-}
-
-#color-img-price {
-    background: var(--color-accent);
-}
-
-
-.button-busy {
-    width: 150px;
-    background: black;
-    color: white;
-    border-radius: 20px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.button-busy p {
-    margin: 0px;
-    color: white;
-    text-align: center;
-}
-
-#centralizar {
-    text-decoration: none;
-    display: flex;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-}
-
-.button-busy:hover{
-    -webkit-box-shadow: 0px 0px 11px 1px rgba(0,0,0,1);
-    -moz-box-shadow: 0px 0px 11px 1px rgba(0,0,0,1);
-    box-shadow: 0px 0px 1px 1px rgba(0,0,0,1);
-}
-
-audio{ 
-    display: none;
-}
-
-
-/* ######################################################### */
-/* ################### tabela perfomance ################### */
-
-#performance{
-    padding: 3% 5% 2% 5%;
-}
-
-
-
-
-
-table{
-    border-collapse: collapse;
-    border: 1px solid rgb(255, 255, 255);
-    -webkit-box-shadow: 0px 0px 11px -8px rgba(0,0,0,1);
-    -moz-box-shadow: 0px 0px 11px -8px rgba(0,0,0,1);
-    box-shadow: 0px 0px 11px -8px rgba(0,0,0,1);
-}
-
-.line0 {
-    background: #0D0D0D;
-    border-color: #0D0D0D;
-    color: #ffffff;
-    padding: 5px;
-}
-
-.line1 {
-    background: #ffffff;
-    border-color: #ffffff;
-}
-
-.line2 {
-    background: #36BFB1;
-    border-color: #36BFB1;
-}
-
-
-
-tr:hover .line1 {
-    background: #591C21;
-    border-color: #591C21;
-    color: #ffffff;
-}
-
-tr:hover .line2 {
-    background: #591C21;
-    border-color: #591C21;
-    color: #ffffff;
-}
-
-
-
-tfoot th {
-    text-align: right;
-}
-
-#th-ri {
-    text-align: center;
-}
-
-/* ################################################## */
-/* ################## SUPPORT ####################### */
-
-.support {
-    background: black;
-    position: relative;
-}
-
-.context-img {
-    display: inline-block;
-    background: url("https://images.pexels.com/photos/267389/pexels-photo-267389.jpeg");
-    background-size: cover;
-    opacity: 0.4;
-    width: 100%;    
-    height: 350px;
-    z-index: 1;
-}
-
-.context-img-centralizar{
-    color: white;
-    display: flex;
-    justify-content: center;    
-    
-}
-
-.context-img-centralizar h3 {
-    position: absolute;
-    top: 20%;
-    z-index: 999;
-    font-size: 32px;
-    font-weight: 900;
-}
-
-.context-img-centralizar p {
-    
-    position: absolute;
-    top: 50%;
-    z-index: 999;
-    font-weight: 100;
-}
-
-
-.context-img-centralizar a {
-    
-    position: absolute;
-    bottom: 10%;
-    z-index: 999;
-    color: white;
-    text-decoration: none;
-    font-weight: 100;
-    border: 1px solid var(--color-accent);
-    border-radius: 12px;
-    padding: 8px 15px;
-
-}
-
-.context-img-centralizar a:hover{
-    text-shadow: 0px 1px 20px var(--color-accent);
-    text-decoration-line: underline;
-    -webkit-box-shadow: 0px 0px 11px -2px rgba(169,217,208,1);
-    -moz-box-shadow: 0px 0px 11px -2px rgba(169,217,208,1);
-    box-shadow: 0px 0px 11px -2px rgba(169,217,208,1);
-}
-
-
-/* ####################################################### */
-/* ###################### FORM ########################### */
-#display-screen {
-    display: flex;
-    padding: 3% 5% 2% 5%;
-    /* justify-content: center; */
-    align-items: center;
-}
-
-#size-screen-half {
-    padding: 20px;
-    width: 50%;
-
-    /* text-align: center; */
-    /* background: #c7acac; */
-    /* border: 1px solid #027373; */
-}
-
-.box-form {
-    /* list-style-type: circle; */
-    padding-top: 25px;
-    border-bottom: 1px solid var(--color-accent);
-}
-
-.font-size-title {
-    font-size: 40px;
-    padding: 0;
-}
-
-#input-context {
-    display: flex;
-    justify-content: center;
-}
-
-#input-context input {
-    border: 0;
-    font-size: 18px;
-}
-
-/* ################################################## */
-/* ################################################## */
-
-footer {
-    background: var(--color-text);
-    display: flex;
-    width: 100%;
-}
-
-footer p {
-    color: white;
-}
-footer nav {
-    display: flex;
-    justify-content: center;
-    /* align-self: center; */
-    /* text-align: center; */
-    width: 50%;
-}
-
-footer nav ul{
-    display: flex;
-}
-
-footer nav ul  li a{
-    display: flex;
-    list-style-type: none;
-    /* text-decoration-line: underline; */
-
-    color: blue;
-    
-    /* text-decoration: none; */
-    padding-left: 20px;
-}
-
-
 /* ######################################################### */
 /* ###################### Media Queries ####################### */
-/* Smartphones (600px para baixo) */
 @media only screen and (max-width: 900px) {
     head {
         width: 380px;
@@ -562,7 +34,6 @@ footer nav ul  li a{
         display: none;
         visibility: collapse;
     }
-
 
     /* ################################################## */
     /* ################# TELA INICIAL ################### */
@@ -589,7 +60,6 @@ footer nav ul  li a{
     .img-home {
         padding: 0%;
         width: 100%;
-        
     }
 
     /* ################################################## */
@@ -650,8 +120,6 @@ footer nav ul  li a{
 
     /* ################################################## */
     /* ################## SUPPORT ####################### */
-
-
     .context-img-centralizar h3 {
         text-align: center;
         top: 0%;
@@ -708,26 +176,5 @@ footer nav ul  li a{
     footer p{
         text-align: center;
     }
-
-
-}
-
-/* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
-@media only screen and (min-width: 600px) {
-    
-}
-
-/*Dispostivos Médios (Tablets deitados, 768px para cima) */
-@media only screen and (min-width: 768px) {
-
-}
-
-/* Dispostivos Largos (laptops/desktops, 992px para cima) */
-@media only screen and (min-width: 992px) {
-    
-}
-
-/* Super Largos (Telas maiores laptops, desktops e até TVs, 1200px para cima) */
-@media only screen and (min-width: 1200px) {
 
 }
